--- a/app/views/pages/principles.html.erb
+++ b/app/views/pages/principles.html.erb
@@ -21,7 +21,7 @@
     	<nav class="main-nav">
     		<a href="#navigation" class="menu-btn">Menu</a>
 			<ul class="primary-nav">
-				<li><a href="http://detentionlogs.com.au/incidents">Data</a></li>
+				<li><a href="http://detentionlogs.com.au/data/incidents">Data</a></li>
 				<li><a href="http://detentionlogs.com.au/investigations">Investigations</a></li>
 				<li><a href="http://detentionlogs.com.au/principles">Principles</a></li>
 			</ul>
@@ -29,14 +29,8 @@
     </header>
 
     <article role="main" class="main reading">
-	    <h1>Our Principles</h1>
-	    <p class="lede">The following principles inform our journalistic, design and technology choices.</p>
-		
-		<ol class="distinct">
-			<li><a href="#be-open-and-accountable">Be open and accountable</a></li>
-			<li><a href="#publish-for-people-not-to-them">Publish <em>for</em> people, not <em>to</em> them</a></li>
-			<li><a href="#were-all-in-this-together">We're all in this together</a></li>
-		</ol>
+	    <h1>Investigations</h1>
+	    <p class="lede">The following investigations were made by .</p>
 		
 		<h2 id="be-open-and-accountable">Be open and accountable</h2>
 		
@@ -125,7 +119,7 @@
 	<footer role="contentinfo" class="main site-footer">
 		<nav class="footer-nav" role="navigation" id="navigation">
 			<ul class="primary-nav">
-				<li><a href="http://detentionlogs.com.au/incidents">Data</a></li>
+				<li><a href="http://detentionlogs.com.au/data/incidents">Data</a></li>
 				<li><a href="http://detentionlogs.com.au/investigations">Investigations</a></li>
 				<li><a href="http://detentionlogs.com.au/principles">Principles</a></li>
 			</ul>
