--- a/app/views/layouts/incidents.html.erb
+++ b/app/views/layouts/incidents.html.erb
@@ -31,9 +31,9 @@
 	<footer role="contentinfo" class="main site-footer">
 		<nav class="footer-nav" role="navigation" id="navigation">
 			<ul class="primary-nav">
-				<li><a href="http://detentionlogs.com.au/incidents">Data</a></li>
+				<li><a href="http://detentionlogs.com.au/data/incidents">Data</a></li>
 				<li><a href="http://detentionlogs.com.au/investigations">Investigations</a></li>
-				<li><a href="http://detentionlogs.com.au/about/principles">Our Principles</a></li>		
+				<li><a href="http://detentionlogs.com.au/principles">Our Principles</a></li>		
 			</ul>
 			<ul class="supporting">
 				<li><a href="http://detentionlogs.com.au/about/glossary">Glossary</a></li>
