changed style reference

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
         <meta name="viewport" content="width=device-width">
 		<meta name="google-site-verification" content="UyFaPbUx_nMcjSfI1G-dkYcTZljC0-do61HPxvESXic" />
 
-	    <link href="http://localhost:3000/assets/style.css?body=1" media="all" rel="stylesheet" type="text/css" />
+	    <link href="/assets/style.css?body=1" media="all" rel="stylesheet" type="text/css" />
     </head>
     <body class="home">
     <section role="main" class="reading main">
