--- a/app/views/pages/principles.html.erb
+++ b/app/views/pages/principles.html.erb
@@ -17,13 +17,13 @@
     </head>
     <body class="principles">
 	<header class="site-header">
-    	<h1 class="logo"><a href="http://detentionlogs.com.au" rel="home">Detention Logs</a></h1>
+    	<h1 class="logo"><a href="" rel="home">Detention Logs</a></h1>
     	<nav class="main-nav">
     		<a href="#navigation" class="menu-btn">Menu</a>
 			<ul class="primary-nav">
-				<li><a href="http://detentionlogs.com.au/data/incidents">Data</a></li>
-				<li><a href="http://detentionlogs.com.au/investigations">Investigations</a></li>
-				<li><a href="http://detentionlogs.com.au/principles">Principles</a></li>
+				<li><a href="/data/incidents">Data</a></li>
+				<li><a href="/investigations">Investigations</a></li>
+				<li><a href="/principles">Principles</a></li>
 			</ul>
 		</nav>
     </header>
@@ -119,14 +119,12 @@
 	<footer role="contentinfo" class="main site-footer">
 		<nav class="footer-nav" role="navigation" id="navigation">
 			<ul class="primary-nav">
-				<li><a href="http://detentionlogs.com.au/data/incidents">Data</a></li>
-				<li><a href="http://detentionlogs.com.au/investigations">Investigations</a></li>
-				<li><a href="http://detentionlogs.com.au/principles">Principles</a></li>
+				<li><a href="/data/incidents">Data</a></li>
+				<li><a href="/investigations">Investigations</a></li>
+				<li><a href="/principles">Principles</a></li>
 			</ul>
 			<ul class="supporting">
-				<li><a href="http://detentionlogs.com.au/about/resources">Resources</a></li>
-				<li><a href="http://detentionlogs.com.au/glossary">Glossary</a></li>
-				<li><a href="http://detentionlogs.com.au/principles">Our Principles</a></li>
+				<li><a href="/glossary">Glossary</a></li>
 			</ul>
 		</nav>
 		<ul class="footer-contact contact  supporting">
