fixed broken links

--- a/app/views/pages/glossary.html.erb
+++ b/app/views/pages/glossary.html.erb
@@ -17,13 +17,13 @@
     </head>
     <body class="principles">
 	<header class="site-header">
-    	<h1 class="logo"><a href="http://detentionlogs.com.au" rel="home">Detention Logs<span> beta</span></a></h1>
+    	<h1 class="logo"><a href="" rel="home">Detention Logs<span> beta</span></a></h1>
     	<nav class="main-nav">
     		<a href="#navigation" class="menu-btn">Menu</a>
 			<ul class="primary-nav">
-				<li><a href="http://detentionlogs.com.au/data/incidents">Data</a></li>
-				<li><a href="http://detentionlogs.com.au/investigations">Investigations</a></li>
-				<li><a href="http://detentionlogs.com.au/principles">Principles</a></li>
+				<li><a href="/data/incidents">Data</a></li>
+				<li><a href="/investigations">Investigations</a></li>
+				<li><a href="/principles">Principles</a></li>
 			</ul>
 		</nav>
     </header>
@@ -148,10 +148,10 @@
 		
 		<dt id="Incident">Incident</dt>
 		<dd>
-			<p>An “incident” in this context is an event in one of Australia’s immigration detention facilities which has been recorded by the facility’s staff. The private contractors that run the detention network, including companies <a href="http://detentionlogs.com.au/about/glossary/#serco">Serco</a>, <a href="http://detentionlogs.com.au/about/glossary/#IHMS">IHMS</a> and <a href="http://detentionlogs.com.au/about/glossary/#G4S">G4S</a>, are required to file incident reports to the <a href="http://detentionlogs.com.au/about/glossary/#DIAC">Australian Government Department of immigration and Citizenship (DIAC)</a>, where they are archived in a centralised database.</p>		
+			<p>An “incident” in this context is an event in one of Australia’s immigration detention facilities which has been recorded by the facility’s staff. The private contractors that run the detention network, including companies <a href="/about/glossary/#serco">Serco</a>, <a href="/about/glossary/#IHMS">IHMS</a> and <a href="/about/glossary/#G4S">G4S</a>, are required to file incident reports to the <a href="/about/glossary/#DIAC">Australian Government Department of immigration and Citizenship (DIAC)</a>, where they are archived in a centralised database.</p>		
 		<p>DIAC are ultimately responsible for the welfare of people held in the detention network. They use these incident reports as one way to understand and track occurrences and conditions in their facilities.</p>
 		
-		<p>The types of incidents described in the reports collected by Detention Logs include births, deaths, illnesses, accidents/injuries, self-harms, complaints, escapes, media presence, protests and more. <a href="http://detentionlogs.com.au/data/incidents">You can browse the reports with our Incident Explorer</a>.</p>
+		<p>The types of incidents described in the reports collected by Detention Logs include births, deaths, illnesses, accidents/injuries, self-harms, complaints, escapes, media presence, protests and more. <a href="/data/incidents">You can browse the reports with our Incident Explorer</a>.</p>
 		</dd>
 		<dt id="Inverbrackie-APOD">Inverbrackie APOD</dt>
 		<dd>Inverbrackie Alternative Place of detention is a low security facility located at the <a href="https://maps.google.com.au/maps?saddr=Alamein+Ave&amp;daddr=Woodside-Nairne+Road,+Hay+Valley,+South+Australia&amp;hl=en&amp;ll=-34.971641,138.892593&amp;spn=0.006805,0.009592&amp;sll=-34.964818,138.898001&amp;sspn=0.027221,0.038366&amp;geocode=FVhf6v0dr1dHCA%3BFRod6v0dhXRHCClhXzX1LTi3ajEMK6YQd1XfXw&amp;t=m&amp;mra=dme&amp;mrsp=0&amp;sz=14&amp;z=16">corner of Alamein Avenue and Woodside-Nairne Road</a> Inverbrackie SA 5244. The postal address is Inverbrackie APOD 10 Woodside-Nairne Road, Inverbrackie SA. According to DIAC, it can accommodate up to 400 people. It opened early in 2011 and is separated from an adjacent Defence facility by a 3 metre high fence and is also fenced at the front of the site. In July 2011, DIAC was reported to have repeatedly refused the Sunday Mail <a href="http://www.adelaidenow.com.au/inside-the-secret-world-of-inverbrackie-detention-centre/story-e6frea6u-1226091448715">access</a> to the Centre or to speak to detainees.</dd>
@@ -351,14 +351,14 @@
 	<footer role="contentinfo" class="main site-footer">
 		<nav class="footer-nav" role="navigation" id="navigation">
 			<ul class="primary-nav">
-				<li><a href="http://detentionlogs.com.au/data/incidents">Data</a></li>
-				<li><a href="http://detentionlogs.com.au/investigations">Investigations</a></li>
-				<li><a href="http://detentionlogs.com.au/principles">Principles</a></li>
+				<li><a href="/data/incidents">Data</a></li>
+				<li><a href="/investigations">Investigations</a></li>
+				<li><a href="/principles">Principles</a></li>
 			</ul>
 			<ul class="supporting">
-				<li><a href="http://detentionlogs.com.au/about/resources">Resources</a></li>
-				<li><a href="http://detentionlogs.com.au/glossary">Glossary</a></li>
-				<li><a href="http://detentionlogs.com.au/principles">Our Principles</a></li>
+				<li><a href="/about/resources">Resources</a></li>
+				<li><a href="/glossary">Glossary</a></li>
+				<li><a href="/principles">Our Principles</a></li>
 			</ul>
 		</nav>
 		<ul class="footer-contact contact  supporting">
@@ -369,11 +369,6 @@
 			<li><a class="email" href="">Contact</a></li>
 <!-- 			<li><a class="phone google-voice" href="">+08 173 453 235</a></li> -->
 		</ul>
-		<article id="copyright" class="supporting">
-			<h2 class="discrete">Using this content / Copyright</h2>
-			<p>Umami synth dreamcatcher skateboard, pickled pop-up occupy pug.  Williamsburg shoreditch pop-up, street art keytar before they sold out authentic sriracha semiotics truffaut hella plaid wes anderson church-key carles.  Gastropub aesthetic +1, blue bottle ethnic hoodie cliche.</p>
-			<p>Semiotics actually bespoke, high life street art +1 carles fanny pack neutra williamsburg craft beer whatever 90's.  Forage truffaut wes anderson, narwhal photo booth food truck actually swag next level.</p>
-		</article>
 	</footer>
 
 <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
