--- a/app/views/pages/principles.html.erb
+++ b/app/views/pages/principles.html.erb
@@ -17,20 +17,26 @@
     </head>
     <body class="principles">
 	<header class="site-header">
-    	<h1 class="logo"><a href="" rel="home">Detention Logs</a></h1>
+    	<h1 class="logo"><a href="http://detentionlogs.com.au" rel="home">Detention Logs</a></h1>
     	<nav class="main-nav">
     		<a href="#navigation" class="menu-btn">Menu</a>
 			<ul class="primary-nav">
-				<li><a href="/data/incidents">Data</a></li>
-				<li><a href="/investigations">Investigations</a></li>
-				<li><a href="/principles">Principles</a></li>
+				<li><a href="http://detentionlogs.com.au/data/incidents">Data</a></li>
+				<li><a href="http://detentionlogs.com.au/investigations">Investigations</a></li>
+				<li><a href="http://detentionlogs.com.au/principles">Principles</a></li>
 			</ul>
 		</nav>
     </header>
 
     <article role="main" class="main reading">
-	    <h1>Investigations</h1>
-	    <p class="lede">The following investigations were made by .</p>
+	    <h1>Our Principles</h1>
+	    <p class="lede">The following principles inform our journalistic, design and technology choices.</p>
+		
+		<ol class="distinct">
+			<li><a href="#be-open-and-accountable">Be open and accountable</a></li>
+			<li><a href="#publish-for-people-not-to-them">Publish <em>for</em> people, not <em>to</em> them</a></li>
+			<li><a href="#were-all-in-this-together">We're all in this together</a></li>
+		</ol>
 		
 		<h2 id="be-open-and-accountable">Be open and accountable</h2>
 		
@@ -119,12 +125,12 @@
 	<footer role="contentinfo" class="main site-footer">
 		<nav class="footer-nav" role="navigation" id="navigation">
 			<ul class="primary-nav">
-				<li><a href="/data/incidents">Data</a></li>
-				<li><a href="/investigations">Investigations</a></li>
-				<li><a href="/principles">Principles</a></li>
+				<li><a href="http://detentionlogs.com.au/incidents">Data</a></li>
+				<li><a href="http://detentionlogs.com.au/investigations">Investigations</a></li>
+				<li><a href="http://detentionlogs.com.au/principles">Principles</a></li>
 			</ul>
 			<ul class="supporting">
-				<li><a href="/glossary">Glossary</a></li>
+				<li><a href="http://detentionlogs.com.au/glossary">Glossary</a></li>
 			</ul>
 		</nav>
 		<ul class="footer-contact contact  supporting">
@@ -135,11 +141,6 @@
 			<li><a class="email" href="">Contact</a></li>
 <!-- 			<li><a class="phone google-voice" href="">+08 173 453 235</a></li> -->
 		</ul>
-		<article id="copyright" class="supporting">
-			<h2 class="discrete">Using this content / Copyright</h2>
-			<p>Umami synth dreamcatcher skateboard, pickled pop-up occupy pug.  Williamsburg shoreditch pop-up, street art keytar before they sold out authentic sriracha semiotics truffaut hella plaid wes anderson church-key carles.  Gastropub aesthetic +1, blue bottle ethnic hoodie cliche.</p>
-			<p>Semiotics actually bespoke, high life street art +1 carles fanny pack neutra williamsburg craft beer whatever 90's.  Forage truffaut wes anderson, narwhal photo booth food truck actually swag next level.</p>
-		</article>
 	</footer>
 
 <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
