--- a/app/views/pages/principles.html.erb
+++ b/app/views/pages/principles.html.erb
@@ -125,7 +125,7 @@
 	<footer role="contentinfo" class="main site-footer">
 		<nav class="footer-nav" role="navigation" id="navigation">
 			<ul class="primary-nav">
-				<li><a href="http://detentionlogs.com.au/incidents">Data</a></li>
+				<li><a href="http://detentionlogs.com.au/data/incidents">Data</a></li>
 				<li><a href="http://detentionlogs.com.au/investigations">Investigations</a></li>
 				<li><a href="http://detentionlogs.com.au/principles">Principles</a></li>
 			</ul>
