--- a/app/views/layouts/incidents.html.erb
+++ b/app/views/layouts/incidents.html.erb
@@ -13,15 +13,16 @@
 </head>
 <body>
 	<header class="site-header">
-    	<h1 class="logo"><a href="http://detentionlogs.com.au" rel="home">Detention&nbsp;Logs<span> beta</span></a> 
+    	<h1 class="logo"><a href="" rel="home">Detention&nbsp;Logs<span> beta</span></a> 
     	<p class="subheading discrete">Inside Australia's immigration detention</p>
     	</h1>
     	<nav class="main-nav">
     		<a href="#navigation" class="menu-btn">Menu</a>
 			<ul class="primary-nav">
-				<li><a href="http://detentionlogs.com.au/data/incidents">Data</a></li>
-				<li><a href="http://detentionlogs.com.au/investigations">Investigations</a></li>
-				<li><a href="http://detentionlogs.com.au/principles">Principles</a></li>
+				<li><a href="/data/incidents">Data</a></li>
+				<li><a href="/investigations">Investigations</a></li>
+				<li><a href="/about">About</a></li>
+				<li><a href="/contribute">Contribute</a></li>	
 			</ul>
 		</nav>
     </header>
@@ -31,13 +32,14 @@
 	<footer role="contentinfo" class="main site-footer">
 		<nav class="footer-nav" role="navigation" id="navigation">
 			<ul class="primary-nav">
-				<li><a href="http://detentionlogs.com.au/data/incidents">Data</a></li>
-				<li><a href="http://detentionlogs.com.au/investigations">Investigations</a></li>
-				<li><a href="http://detentionlogs.com.au/principles">Our Principles</a></li>		
+				<li><a href="/data/incidents">Data</a></li>
+				<li><a href="/investigations">Investigations</a></li>
+				<li><a href="/about">About</a></li>
+				<li><a href="/contribute">Contribute</a></li>			
 			</ul>
 			<ul class="supporting">
-				<li><a href="http://detentionlogs.com.au/about/glossary">Glossary</a></li>
-		
+				<li><a href="/about/glossary">Glossary</a></li>
+				<li><a href="/about/glossary">Principles</a></li>	
 			</ul>
 		</nav>
 		<ul class="footer-contact contact  supporting">
