--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,6 +21,8 @@
 	    <p class="lede">A new project supporting deeper community knowledge of and accountability for conditions in Australia’s Immigration Detention Network. We publish data, documents and investigation that reveal new perspectives on conditions and events inside immigration detention.</p>
 	    <p class="distinct"><strong>Access the <a href="/data/incidents">data</a>.</strong></p>
 	    <p class="distinct"><strong>Follow our <a href="/investigations">investigations</a>.</strong></p>
+	    <p class="distinct"><strong>Learn more about the <a href="/about">project</a>.</strong></p>
+	    <p class="distinct"><strong>Find out how you can <a href="/about">contribute</a>.</strong></p>
 	    <p class="discrete">Follow <a href="http://twitter.com/detentionlogs">@DetentionLogs</a> for updates</p>
     </section>
 	<footer role="contentinfo" class="main site-footer">
