--- a/app/views/pages/principles.html.erb
+++ b/app/views/pages/principles.html.erb
@@ -1,32 +1,4 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Our Principles | Detention Logs</title>
-
-        <meta name="author" content="Detention Logs">
-        <meta name="description" content="We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention network.">
-        <meta name="viewport" content="width=device-width">
-		<meta name="google-site-verification" content="UyFaPbUx_nMcjSfI1G-dkYcTZljC0-do61HPxvESXic" />
-
-	    <link href="/assets/style.css?body=1" media="all" rel="stylesheet" type="text/css" />
-    </head>
-    <body class="principles">
-	<header class="site-header">
-    	<h1 class="logo"><a href="http://detentionlogs.com.au" rel="home">Detention Logs</a></h1>
-    	<nav class="main-nav">
-    		<a href="#navigation" class="menu-btn">Menu</a>
-			<ul class="primary-nav">
-				<li><a href="http://detentionlogs.com.au/data/incidents">Data</a></li>
-				<li><a href="http://detentionlogs.com.au/investigations">Investigations</a></li>
-				<li><a href="http://detentionlogs.com.au/principles">Principles</a></li>
-			</ul>
-		</nav>
-    </header>
+<%= render 'pages/header' %>
 
     <article role="main" class="main reading">
 	    <h1>Our Principles</h1>
@@ -122,32 +94,4 @@
 		</ul>
     </article>
 
-	<footer role="contentinfo" class="main site-footer">
-		<nav class="footer-nav" role="navigation" id="navigation">
-			<ul class="primary-nav">
-				<li><a href="http://detentionlogs.com.au/data/incidents">Data</a></li>
-				<li><a href="http://detentionlogs.com.au/investigations">Investigations</a></li>
-				<li><a href="http://detentionlogs.com.au/principles">Principles</a></li>
-			</ul>
-			<ul class="supporting">
-				<li><a href="http://detentionlogs.com.au/glossary">Glossary</a></li>
-			</ul>
-		</nav>
-		<ul class="footer-contact contact  supporting">
-			<li><a class="twitter" href="https://twitter.com/DetentionLogs/" title="Detention Logs on Twitter" rel="me">@detentionlogs</a></li>
-			<li><a class="github" href="https://github.com/DetentionLogs/" title="Detention Logs on Github" rel="me">GitHub</a></li>
-		</ul>
-		<ul class="footer-contact contact  supporting">
-			<li><a class="email" href="">Contact</a></li>
-<!-- 			<li><a class="phone google-voice" href="">+08 173 453 235</a></li> -->
-		</ul>
-	</footer>
-
-<!-- Grab Google CDN's jQuery. fall back to local if necessary -->
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-		<script>window.jQuery || document.write("<script src='../assets/jquery-1.9.1.min.js'>\x3C/script>")</script>
-	    <script src="http://localhost:3000/assets/site.js"></script>
-
-	</body>
-</html>    </body>
-</html>
+<%= render 'pages/footer' %>
