--- a/app/views/pages/principles.html.erb
+++ b/app/views/pages/principles.html.erb
@@ -12,23 +12,39 @@
 		
 		<h2 id="be-open-and-accountable">Be open and accountable</h2>
 		
-		<p>By making ourselves open and transparent we become more accountable for our actions and are held to a high standard. Our community of users deserve to know who we are and how we work, just as they derserve to know the details of the opperations of Government darpmartments and private companies who represent them.</p>
+		<p>By making ourselves open and transparent we become more accountable for our actions
+		and are held to a high standard. Our community of users deserve to know [who we are
+		and how we work](http:/detentionlogs.com.au/about), just as they deserve to know the
+		details of the operations of government departments and private companies who act on
+		their behalf.</p>
+
+		<p>Australian government agencies should develop programs to publish data more
+		proactively, to increase accountability of the public service and the public’s
+		engagement with it. <a href="http://agimo.gov.au/files/2013/03/Big-Data-Strategy-Issues-Paper1.pdf">The Department of Finance and Deregulation presented an issues
+		paper on Big Data in March
+		2013</a> which
+		said “Big data allows for more focused and evidence-based policy design” and
+		developing proactive data publishing programs may result in “reduction of fraudulent
+		or criminal activity across both government and private sectors”.</p>
+
+		<p>We aim to encourage proactive publication of immigration detention data and will
+		actively campaign to facilitate this access. To achieve this we will set an example
+		with our own publishing standards. Our data and documents should be available for
+		reuse, republishing and remixing. When making publishing decisions we always start
+		from a default position of openness using a Creative Commons Attribution license,
+		and then adding responsible restrictions if necessary (for example, our
+		investigations text will be available under a Creative Commons Attribution,
+		*Non-Commercial* Share-Alike license).</p>
 		
-		<p>Australian Government Departments should develop programs to publish data more proactively, to increase accountability of the public service and the public’s engagement with it. <a href="http://agimo.gov.au/files/2013/03/Big-Data-Strategy-Issues-Paper1.pdf">The Department of Finance and Deregulation presented an issues paper on Big Data in March 2013</a>, stating that, ”Big data allows for more focused and evidence-based policy design” and developing proactive data publishing programs may result in “reduction of fraudulent or criminal activity across both government and private sectors”.</p>
-		
-		<p>We aim to encourage proactive publication of immigration detention data and will actively campaign to facilitate this access.</p>
-		
-		<p>We aim to set an example with our own publishing standards. Our data and documents should be available for reuse, republishing and remixing. When making publishing decisions, we always start from a default position of openness, using a Creative Commons, Attribution license, and then adding responsible restrictions if necessary (for example, our investigations text will be availble under a Creative Commons Attribution, <em>Non-Commercial</em> Share-Alike license).</p>
-		
-		<p>Check the bottom of each page for specific copyright licensing information for that content, and always feel free to contact us if you have inquiries about using any of the content published by Detention Logs.</p>
-		
-		<ul>
-		<li>Evidence-based reporting is essential. This involves an assessment of the probative value of facts and the selection, emphasis and use of them based on that assessment.</li>
-		</ul>
-		
+
 		<h2 id="publish-for-people-not-to-them">Publish <em>for</em> people, not <em>to</em> them</h2>
 		
-		<p>The primary goal of Detention Logs is to provide the public with the facts they need to better understand the reality of Australia’s immigration detention network. Across our editorial, design and publishing practices, we judge the success of our choices against how our work is used to support more informed policy discussion and challenge inhumane policy based on spin. We provide information to be engaged with and pulled apart by our audience, rather than just accepted passively.</p>
+		<p>The primary goal of Detention Logs is to provide the public with the facts they need
+to better understand the reality of Australia’s immigration detention network.
+Across our editorial, design and publishing practices, we judge the success of our
+choices against how our work is used to support more informed policy discussion and
+challenge inhumane policy based on spin. We provide information to be engaged with
+and pulled apart, rather than just accepted passively, by our users.</p>
 		<section class="references discrete">
 			<h3>References</h3>
 			
@@ -41,11 +57,20 @@
 		
 		<h2 id="were-all-in-this-together">We’re all in this together</h2>
 		
-		<p>We hold ourselves to the same standard of transparency that we aim to achieve for the immigration detention network, and believe that our methods are improved by being public. Our methodology for processing data will be published with each dataset we analyse. We will also publish our processes for investigation, data processing and publish, as we have drawn on what others have published in turn. </p>
+		<p>Detention Logs is part of a growing community of individuals and institutions that
+are committed to enhancing transparency in governments around the world. Our
+particular focus is on Australia’s immigration detention centres, which have long
+been shielded from public scrutiny. The Department of Immigration and Citizenship,
+and the private organisations that work on their behalf, should be accountable to
+the public for their actions. </p>
 		
-		<p>Our mission and methods are drawn from the ideas of pioneering organisations and individuals. Credit should be given where it is due. Our major influences include Wikileaks, Pro Publica, Heather Brooke, Clay Shirky, Open Australia, Edward Tufte, Jeremy Keith, Robert Rosenthal, </p>
+		<p>Our mission and methods are drawn from the ideas of pioneering organisations and
+individuals. Credit should be given where it’s due. Our major influences include
+Wikileaks, ProPublica, Heather Brooke, Clay Shirky, Open Australia, Edward Tufte,
+Jeremy Keith, Robert Rosenthal, [add more from Laurie and paul].  We’ve received
+extremely generous support when we’ve asked and would love to return the favour to
+anyone looking to learn more or user our information.</p>
 		
-		<p>We ask for help and </p>
 		
 		<section class="references discrete">
 			<h3>References</h3>
@@ -58,33 +83,60 @@
 		
 		<h2 id="takethelongtermview">Take the long term view</h2>
 		
-		<p>What new uses and meanings will the information we publish today have in 2, 5, 10, 20, 50, 100 years? Similar records from just a century ago are treasured by historians and researchers for providing insight into our society’s past attitudes and policies.</p>
+		<p>What new uses and meanings will the information we publish today have in 5, 20 or
+100 years? Similar records from just a century ago are treasured by historians and
+researchers for providing insight into our society’s past attitudes and policies.</p>
 		
-		<p>We cannot predict how our work will be used in the future, but must protect the potential for it to be used in powerful, novel ways by being as open and interoperable as posible.</p>
+		<p>We can’t predict how our work will be used in the future, so we aim to support as
+wide a potential for use as possible. In our explanations we will be as clear as
+possible and not assume prior knowledge. We will protect our URLs and attempt to
+support groups like Trove, Internet Archive and Pandora in archiving our work for
+long term accessibility.</p>
 		
-		<p>In our explanations we should be as clear as possible and not assume prior knowledge. We will protect our urls and attempt to support groups like Trove, Internet Archive, Pandora etc. in archiving our work for long term accessability.</p>
+		<h2 id="avoidbalanceasbias">False balance is not fairness</h2>
 		
-		<h2 id="avoidbalanceasbias">Avoid balance as bias</h2>
-		
-		<ul>
-		<li><p>Our reporting aims to uncover the truth about events in immigration detention and provide a voice for marginalised asylum seekers and refugees through rigorous investigation. Our reporting efforts will draw on the data we have obtained and other sources to verify it’s accuracy.</p></li>
-		<li><p>Fairness in reporting doesn’t mean that our reports will always be balanced. We won’t publish statements from government agencies, corporations or other entities simply to fill page space if those statements have low value. A factual proposition does not need to be weighed evenly against a counter proposition if the counter proposition&#8217;s probative value is low. </p></li>
-		</ul>
+	<p>Our reporting aims to uncover the truth about events in immigration detention and
+provide a voice for marginalised asylum seekers and refugees through rigorous
+investigation.  Our reporting efforts will draw on the data we have obtained and
+other sources to verify it’s accuracy.</p>
+		<p>Fairness in reporting doesn’t mean that our reports will always be balanced.  We
+won’t publish statements from government agencies, corporations or other entities
+simply to fill page space if those statements have low value. Every statement we
+receive will be tested on its own merits, and we will strive to avoid the trap of
+“false balance”. </p>
 		
 		<h2 id="privacy">Privacy</h2>
 		
-		<blockquote>
-		<p>Aim to attribute information to its source. Where a source seeks anonymity, do not agree without first considering the source&#8217;s motives and any alternative attributable source. Where confidences are accepted, respect them in all circumstances.
-		— <a href="http://www.alliance.org.au/code-of-ethics.html">Media Alliance Code of Ethics</a></p>
-		</blockquote>
+		<h3>Asylum Seakers</h3>
+
+	<p>We will protect the privacy of asylum seekers who may be exposed to harm or risk.
+		Asylum seekers have a legitimate expectation of privacy in information that may
+		identify them, and we will respect that expectation in our reporting. But in
+		circumstances where asylum seekers consent to the use of identifying information,
+		and where there is a public interest in it’s release, we will publish personal
+		details.</p>
+
+		<h3>Sources and Government Spokespeople</h3>
+
+		<p>Aim to attribute information to its source.  Where a source seeks anonymity, do
+		not agree without first considering the source's motives and any alternative
+		attributable source.  Where confidences are accepted,  respect them in all
+		circumstances. See <a href="http://www.alliance.org.au/code-of-ethics.html">Media Alliance Code of Ethics</a></p>
+
+		<p>Source protection is an inviolable principle of journalism. We will never betray
+		anonymity we grant to sources.</p>
+
+		<p>We will not grant anonymity to government spokespersons. If a person is speaking on
+behalf of a government minister or agency then they should be accountable for those
+statements. With anonymity can come deniability—official spokespersons should not be
+able to deny statements they have made in response to inquiries by the public. There
+is an expectation that anything a spokesperson says is on the record, unless
+explicitly stated otherwise. Public servants wield considerable power in our society
+and should be transparent in the ways they engage with journalists and the public.</p>
+
+
 		
-		<p>Source protection is an inviolable principle of journalism. We will never betray anonymity we grant to sources.</p>
-		
-		<p>We will protect the privacy of asylum seekers who may be exposed to harm or risk. Asylum seekers have a legitimate expectation of privacy in information that may identify them, and we will respect that expectation in our reporting. But in circumstances where asylum seekers consent to the use of identifying information, and where there is a public interest in it’s release, we will publish personal details.</p>
-		
-		<p>We will not grant anonymity to government spokespersons. If a person is speaking on behalf a government minister or agency then they should be accountable for those statements. With anonymity can come deniability—official spokespersons should not be able to deny statements they have made in response to inquries by the public. There is an expectation that anything a person says is on the record, unless explicitly stated otherwise. Public servants weild considerable power in our society and should be transparent in the ways they engage with journalists and the public.</p>
-		
-		<h2 id="otherguideswelookto:">Guides we look to:</h2>
+		<h2 id="otherguideswelookto:">Other guides we look to:</h2>
 		
 		<ul>
 		<li><a href="http://www.alliance.org.au/code-of-ethics.html">Media Alliance Code of Ethics</a>.</li>
