--- a/app/views/layouts/incidents.html.erb
+++ b/app/views/layouts/incidents.html.erb
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<header class="site-header">
-    	<h1 class="logo"><a href="" rel="home">Detention&nbsp;Logs<span> beta</span></a> 
+    	<h1 class="logo"><a href="/" rel="home">Detention&nbsp;Logs<span> beta</span></a> 
     	<p class="subheading discrete">Inside Australia's immigration detention</p>
     	</h1>
     	<nav class="main-nav">
