--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -4,6 +4,13 @@
 	<p>An “incident” in this context is an event in one of Australia’s immigration detention facilities which has been recorded by the facility’s staff. The private contractors that run the detention network, including companies <a href="/about/glossary/#serco">Serco</a>, <a href="/about/glossary/#IHMS">IHMS</a> and <a href="/about/glossary/#G4S">G4S</a>, are required to file incident reports to the <a href="/about/glossary/#DIAC">Australian Government Department of immigration and Citizenship (DIAC)</a>, where they are archived in a centralised database.</p>
 			
 	<p>DIAC are ultimately responsible for the welfare of people held in the detention network. They use these incident reports as one way to understand and track occurrences and conditions in their facilities.</p>
+	<p>The incident data published here has been provided by the Department of
+Immigration and Citizenship, released under the Freedom of Information Act
+1982 (Cth). The Freedom of Information (FOI) system allows any member of
+the public to lawfully access government information. The logs record
+details of incidents at all detention facilities from October 2009 to May
+2011. To request a copy of the original PDF summary log contact DIAC at
+natcomms@immi.gov.au. You can also download a spreadsheet of the data <a href="https://s3.amazonaws.com/detention_logs/Dataset+for+incident+database.csv">here</a>.</p>
 	<p>Explore the incident reports with the filters below.</p>
 
 </section>
