--- a/app/views/pages/principles.html.erb
+++ b/app/views/pages/principles.html.erb
@@ -67,7 +67,7 @@ the public for their actions. </p>
 		<p>Our mission and methods are drawn from the ideas of pioneering organisations and
 individuals. Credit should be given where it’s due. Our major influences include
 Wikileaks, ProPublica, Heather Brooke, Clay Shirky, Open Australia, Edward Tufte,
-Jeremy Keith, Robert Rosenthal, [add more from Laurie and paul].  We’ve received
+Jeremy Keith, Robert Rosenthal.  We’ve received
 extremely generous support when we’ve asked and would love to return the favour to
 anyone looking to learn more or user our information.</p>
 		
