fixed stray copy in principles

--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -3,7 +3,7 @@
 			<ul class="primary-nav">
 				<li><a href="http://detentionlogs.com.au/data/incidents">Data</a></li>
 				<li><a href="http://detentionlogs.com.au/investigations">Investigations</a></li>
-				<li><a href="http://detentionlogs.com.au/principles">About</a></li>
+				<li><a href="http://detentionlogs.com.au/about">About</a></li>
 				<li><a href="http://detentionlogs.com.au/contribute">Contribute</a></li>
 			</ul>
 			<ul class="supporting">
