Remove stray url

--- a/app/views/pages/glossary.html.erb
+++ b/app/views/pages/glossary.html.erb
@@ -196,7 +196,7 @@
 		<dt id="NWP">NWP</dt>
 		<dd>North West Point Immigration Facility.</dd>
 		
-		<dd>NWP is located on Christmas Island and was constructed in 2008. The facility expanded the scope of detention facilities on the Island. <strong>It is also known as Christmas Island IDC (Immigration Detention Centre)</strong>. It is located near Kalgoorlie Street in the <a href="https://maps.google.com/maps?q=Christmas+Island&amp;hl=en&amp;ll=-10.469666,105.575438&amp;spn=0.021944,0.032101&amp;sll=-32.010396,135.119128&amp;sspn=73.806301,131.484375&amp;t=h&amp;hnear=Christmas+Island&amp;z=15">northwest corner</a> of Christmas Island https://maps.google.com/maps?q=Christmas+Island&amp;hl=en&amp;ll=&#8211;10.469666,105.575438&amp;spn=0.021944,0.032101&amp;sll=&#8211;32.010396,135.119128&amp;sspn=73.806301,131.484375&amp;t=h&amp;hnear=Christmas+Island&amp;z=15</dd>
+		<dd>NWP is located on Christmas Island and was constructed in 2008. The facility expanded the scope of detention facilities on the Island. <strong>It is also known as Christmas Island IDC (Immigration Detention Centre)</strong>. It is located near Kalgoorlie Street in the <a href="https://maps.google.com/maps?q=Christmas+Island&amp;hl=en&amp;ll=-10.469666,105.575438&amp;spn=0.021944,0.032101&amp;sll=-32.010396,135.119128&amp;sspn=73.806301,131.484375&amp;t=h&amp;hnear=Christmas+Island&amp;z=15">northwest corner</a> of Christmas Island.</dd>
 		
 		
 		<dt id="OBS">OBS</dt>
