Added links to credits

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -28,17 +28,16 @@
 		feedback, contributions or requests.</p>
 		
 		<p><strong>Producers: </strong>
-       Luke Bacon, Paul Farrell, Lawrence Bull</p>
+       <a href="http://twitter.com/equivalentideas">Luke Bacon</a>, <a href="http://twitter.com/FarrellPF">Paul Farrell</a>, <a href="http://twitter.com/Lawrence_Bull">Lawrence Bull</a></p>
 
 		<p><strong>Data Processing:</strong>
-        Lawrence Bull, Vincent Farrell, Paul Farrell, Luke Bacon and Peter Francis</p>
+        Lawrence Bull, Vincent Farrell, Paul Farrell, Luke Bacon and <a href="http://peterwilliamfrancis.tumblr.com/">Peter Francis</a></p>
 
 		<p><strong>Website </strong>
 		:        Luke Bacon</p>
 
 
-		<p>Thanks to Wendy Bacon, Bryan McLeod, The Global Mail, New Matilda, Open Australia,
-		The Australian Centre for Independent Journalism.</p>
+		<p>Thanks to <a href="http://wendybacon.com">Wendy Bacon</a>, <a href="http://bryanmcleod.com.au/">Bryan McLeod</a>, <a href="http://theglobalmail.org/">The Global Mail</a>, <a href="http://newmatilda.com/">New Matilda</a>, <a href="http://openaustralia.org">Open Australia</a>, <a href="http://investigate.org.au">The Australian Centre for Independent Journalism</a> and <a href="http://guardian.co.uk/australia">The Guardian Australia</a>.</p>
     </article>
 
 	
