Added `rake api:right_to_know:update` task + views
Task checks the status of FOI requests on the RtK site and imports the data as FoiRequest records. The status of the FOI Requet is displayed on the incident page. New incidents are created with the tags: detentionlogs and incident-number:1-XXXX

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1339,6 +1339,7 @@ body {
 	}
 	.detail-report-link {
 		display: inline-block;
+    margin-left: 0.25rem;
 		float: right;
 	}
 	.editors-additional,
