Added link to footer contact

--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -16,7 +16,7 @@
 			<li><a class="github" href="https://github.com/DetentionLogs/" title="Detention Logs on Github" rel="me">GitHub</a></li>
 		</ul>
 		<ul class="footer-contact contact  supporting">
-			<li><a class="email" href="">Contact</a></li>
+			<li><a class="email" href="mailto:detentionlogs@gmail.com" title="contact Detention Logs team via email">Contact</a></li>
 <!-- 			<li><a class="phone google-voice" href="">+08 173 453 235</a></li> -->
 		</ul>
 	</footer>
