--- a/app/views/layouts/incidents.html.erb
+++ b/app/views/layouts/incidents.html.erb
@@ -47,7 +47,7 @@
 			<li><a class="github" href="https://github.com/DetentionLogs/" title="Detention Logs on Github" rel="me">GitHub</a></li>
 		</ul>
 		<ul class="footer-contact contact  supporting">
-		<!--	<li><a class="email" href="">Contact</a></li> -->
+			<li><a class="email" href="mailto:detentionlogs@gmail.com" title="email Detention Logs">Contact</a></li>
 <!-- 			<li><a class="phone google-voice" href="">+08 173 453 235</a></li> -->
 		</ul>
 		<article id="copyright" class="supporting">
