--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -24,7 +24,18 @@
 <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script>window.jQuery || document.write("<script src='../assets/jquery-1.9.1.min.js'>\x3C/script>")</script>
-	    <script src="http://localhost:3000/assets/site.js"></script>
+
+        <!-- Google Analytics -->
+        <script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-40270731-1', 'detentionlogs.com.au');
+		  ga('send', 'pageview');
+
+	</script>
 
 	</body>
 </html>    </body>
