completed the TOC

--- a/app/views/pages/principles.html.erb
+++ b/app/views/pages/principles.html.erb
@@ -8,6 +8,9 @@
 			<li><a href="#be-open-and-accountable">Be open and accountable</a></li>
 			<li><a href="#publish-for-people-not-to-them">Publish <em>for</em> people, not <em>to</em> them</a></li>
 			<li><a href="#were-all-in-this-together">We're all in this together</a></li>
+			<li><a href="#think-long-term">Think long-term</a></li>
+			<li><a href="#false-balance-is-not-fairness">False balance is not fairness</a></li>
+			<li><a href="#privacy">Be clear on privacy</a></li>
 		</ol>
 		
 		<h2 id="be-open-and-accountable">Be open and accountable</h2>
@@ -81,7 +84,7 @@ anyone looking to learn more or user our information.</p>
 			</ul>
 		</section>
 		
-		<h2 id="takethelongtermview">Take the long term view</h2>
+		<h2 id="think-long-term">Think long-term</h2>
 		
 		<p>What new uses and meanings will the information we publish today have in 5, 20 or
 100 years? Similar records from just a century ago are treasured by historians and
@@ -93,7 +96,7 @@ possible and not assume prior knowledge. We will protect our URLs and attempt to
 support groups like Trove, Internet Archive and Pandora in archiving our work for
 long term accessibility.</p>
 		
-		<h2 id="avoidbalanceasbias">False balance is not fairness</h2>
+		<h2 id="false-balance-is-not-fairness">False balance is not fairness</h2>
 		
 	<p>Our reporting aims to uncover the truth about events in immigration detention and
 provide a voice for marginalised asylum seekers and refugees through rigorous
@@ -105,7 +108,7 @@ simply to fill page space if those statements have low value. Every statement we
 receive will be tested on its own merits, and we will strive to avoid the trap of
 “false balance”. </p>
 		
-		<h2 id="privacy">Privacy</h2>
+		<h2 id="privacy">Be clear on privacy</h2>
 		
 		<h3>Asylum Seakers</h3>
 
@@ -136,7 +139,7 @@ and should be transparent in the ways they engage with journalists and the publi
 
 
 		
-		<h2 id="otherguideswelookto:">Other guides we look to:</h2>
+		<h2 id="we-look-up-to">Guides we look to:</h2>
 		
 		<ul>
 		<li><a href="http://www.alliance.org.au/code-of-ethics.html">Media Alliance Code of Ethics</a>.</li>
