fixed broken links in incident layout footer

--- a/app/views/layouts/incidents.html.erb
+++ b/app/views/layouts/incidents.html.erb
@@ -38,8 +38,8 @@
 				<li><a href="/contribute">Contribute</a></li>			
 			</ul>
 			<ul class="supporting">
-				<li><a href="/about/glossary">Glossary</a></li>
-				<li><a href="/about/glossary">Principles</a></li>	
+				<li><a href="/glossary">Glossary</a></li>
+				<li><a href="/principles">Principles</a></li>	
 			</ul>
 		</nav>
 		<ul class="footer-contact contact  supporting">
