--- a/app/views/incidents/show.html.erb
+++ b/app/views/incidents/show.html.erb
@@ -90,8 +90,29 @@
 			<dd>The unique string of characters used by DIAC to identify a single incident.</dd>
 			
 			<dt>Occurred On</dt>
-			<dd>The date and time that the incident described in the report was to recorded to have occurred at.</dd>
+			<dd>The date and time attributed to the incident.</dd>
 			</dl>
+			
+			<dt>Type</dt>
+			<dd>The category of incident.</dd>
+			</dl>
+			
+			<dt>Level</dt>
+			<dd>The degree of urgency attributed to the incident.</dd>
+			</dl>
+			
+			<dt>Summary</dt>
+			<dd>A summary of the incident.</dd>
+			</dl>
+			
+			<dt>Location</dt>
+			<dd>The facility to which the event relates.</dd>
+			</dl>
+			
+			<dt>Location Detail</dt>
+			<dd>The more specific location of this individual event i.e. the specific room and area within the facility where the incident was reported. Note that sometime the *Location Detail* is outside the *Location* specified (for example, [Incident 1-7A4ULB](../data/incidents/43302): Location = Villawood IDC, Location Details = MRRC Correctional Centre [Metropolitan Remand and Reception Centre at Silverwater Correctional Complex in Western Sydney] ).</dd>
+			</dl>
+			
 			
 			
 			<h2 id="flaganissue">Flag an issue</h2>
