--- a/app/views/incidents/adopt.html.erb
+++ b/app/views/incidents/adopt.html.erb
@@ -5,9 +5,9 @@
 <article class="main reading">
 	<h1>Adopt Incident <%= @incident.incident_number %></h1>
 	
-	<p class="lede">Adopt Incident <%= @incident.incident_number %> and bring to light more information about what occurred.</p>
+	<p class="lede">Bring to light more information about what occurred.</p>
 
-	<p>It’s easy to submit a request to the Australian Government for the Detailed Incident Report for this incident. The Freedom of Information (FOI) system allows anyone to lawfully access government documents. We’ve used Right To Know’s FOI tool so you can use the system with just a few clicks.</p>
+	<p>Request the Detailed Incident Report from the Immigration Department. It’s easy. Freedom of Information (FOI) laws allow anyone to access government documents. We’ve used Right To Know’s FOI tool so you can do this in just a few clicks.</p>
 	
 	<p><strong><%=link_to_right_to_know_form(@incident) %></strong></p>
 	
