fixed typo, author missing last name

--- a/app/views/pages/investigations.html.erb
+++ b/app/views/pages/investigations.html.erb
@@ -14,7 +14,7 @@
 			
 			<h2 id="asylumseekersdeportedwithviolence"><a href="http://www.newmatilda.com/2013/08/14/asylum-seekers-deported-violence">Asylum Seekers Deported with Violence</a></h2>
 			
-			<p>by Paul Farrell, Lawrence Bull and Luke </p>
+			<p>by Paul Farrell, Lawrence Bull and Luke Bacon</p>
 			
 			<p><em>14 August, 2013</em> - The Department of Immigration has approved the use of a body lock, strongly resembling a restraint technique banned by police, to involuntarily deport people from Australia.</p>
 			
