added helper information about RtK on hover

--- a/app/views/incidents/adopt.html.erb
+++ b/app/views/incidents/adopt.html.erb
@@ -7,7 +7,7 @@
 	
 	<p class="lede">Bring to light more information about what occurred.</p>
 
-	<p>Request the Detailed Incident Report from the Immigration Department. It’s easy. Freedom of Information (FOI) laws allow anyone to access government documents. We’ve used Right To Know’s FOI tool so you can do this in just a few clicks.</p>
+	<p>Request the Detailed Incident Report from the Immigration Department. It’s easy. Freedom of Information (FOI) laws allow anyone to access government documents. We’ve used <abbr title="A project by the OpenAustralia Foundation to make FOI easier and communal.">Right To Know</abbr>’s FOI tool so you can do this in just a few clicks.</p>
 	
 	<p><strong><%=link_to_right_to_know_form(@incident) %></strong></p>
 	
