moved _header and _footer into layouts

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
-<%= render 'pages/header' %>
+<%= render 'layouts/header' %>
 
     <article role="main" class="main reading">
 		<h1>About Detention Logs</h1>
@@ -41,4 +41,4 @@
     </article>
 
 	
-<%= render 'pages/footer' %>
+<%= render 'layouts/footer' %>
