--- a/app/views/pages/glossary.html.erb
+++ b/app/views/pages/glossary.html.erb
@@ -1,4 +1,4 @@
-<%= render 'pages/header' %>
+<%= render 'layouts/header' %>
 
     <article role="main" class="main reading glossary">
 	    <h1>Glossary</h1>
@@ -320,4 +320,4 @@
 		<p>In April 2013, The Age <a href="http://www.theage.com.au/opinion/political-news/children-to-be-moved-to-detention-centres-20130430-2ir8y.html">reported</a> that one of the compounds would be used to detain children. Professor Louise Newman of Monash University said that this Centre was unsuitable for children.</p></dd>
     </article>
 
-<%= render 'pages/footer' %>
+<%= render 'layouts/footer' %>
