--- a/app/views/pages/investigations.html.erb
+++ b/app/views/pages/investigations.html.erb
@@ -1,4 +1,4 @@
-<%= render 'pages/header' %>
+<%= render 'layouts/header' %>
 
     <article role="main" class="main reading">
 	
@@ -103,4 +103,4 @@
 	
     </article>
 
-<%= render 'pages/footer' %>
+<%= render 'layouts/footer' %>
