--- a/app/views/pages/principles.html.erb
+++ b/app/views/pages/principles.html.erb
@@ -1,4 +1,4 @@
-<%= render 'pages/header' %>
+<%= render 'layouts/header' %>
 
     <article role="main" class="main reading">
 	    <h1>Our Principles</h1>
@@ -149,4 +149,4 @@ and should be transparent in the ways they engage with journalists and the publi
 		</ul>
     </article>
 
-<%= render 'pages/footer' %>
+<%= render 'layouts/footer' %>
