--- a/app/views/pages/contribute.html.erb
+++ b/app/views/pages/contribute.html.erb
@@ -1,4 +1,4 @@
-<%= render 'pages/header' %>
+<%= render 'layouts/header' %>
 
     <article role="main" class="main reading">
 		<h1>How you can help</h1>
@@ -43,4 +43,4 @@
     </article>
 
 	
-<%= render 'pages/footer' %>
+<%= render 'layouts/footer' %>
