--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -1,25 +1,4 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Privacy Policy | Detention Logs</title>
-        
-        <meta name="author" content="Detention Logs">
-        <meta name="description" content="We publish databases, documents and investigations that reveal new perspectives on conditions and events in Australia’s immigration detention&nbsp;network.">
-        <meta name="viewport" content="width=device-width">
-
-	    <link href="/assets/style.css?body=1" media="all" rel="stylesheet" type="text/css" />
-        
-        <script src="js/fixers.js"></script>
-    </head>
-    <body>
-    	<header class="site-header">
-	    	<h1 class="logo"><a href="http://detentionlogs.com.au" rel="home">Detention Logs</a></h1>
-    	</header>
+<%= render 'layouts/header' %>
 	    <article class="main reading">
 			<h1 id="privacypolicy">Privacy Policy</h1>
 			
@@ -38,27 +17,4 @@
 			<p>As always, visitors should be aware that (like almost every other site you visit) we can’t guarantee that your connection with our site is secure. Any personal information you do provide is at your own risk. We strongly support you in taking an interest in your privacy online and recommend that you check out <a href="http://www.ghostery.com/">Ghostery</a>, a browser add-on to help users understand who is tracking them, <a href="https://www.eff.org/https-everywhere">HTTPS Everywhere</a> and <a href="https://www.eff.org/issues/do-not-track">Do Not Track</a>.</p>
 
 	    </article>
-        <footer class="site-footer" role="contentinfo">
-	        <ul class="contact supporting">
-	        	<li><a href="http://twitter.com/detentionlogs" class="u-url twitter" rel="me">@DetentionLogs</a></li>
-	        	<li><a class="u-email email" href="mailto:detentionlogs@gmail.com">Contact</a></li>
-	        </ul>
-        </footer>
-<!--
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/jquery-1.9.0.min.js"><\/script>')</script>
--->
-
-        <!-- Google Analytics -->
-        <script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-		
-		  ga('create', 'UA-40270731-1', 'detentionlogs.com.au');
-		  ga('send', 'pageview');
-		
-		</script>
-    </body>
-</html>
+<%= render 'layouts/footer' %>
